# myrobot

./: .gitignore  CMakeLists.txt  README.md  package.xml  scripts10.h5  scripts100.h5  scripts110.h5  scripts120.h5  scripts130.h5  scripts140.h5  scripts150.h5  scripts160.h5  scripts170.h5  scripts180.h5  scripts190.h5  scripts20.h5  scripts220.h5  scripts250.h5  scripts270.h5  scripts280.h5  scripts30.h5  scripts300.h5  scripts40.h5  scripts50.h5  scripts60.h5  scripts70.h5  scripts80.h5  scripts90.h5
config/: ekf_config.yaml
launch/: cube.launch  empty_world.launch  moving_cube.launch  myrobot.launch  myrobot_dqn_stage_1.launch  myrobot_ekf.launch  myrobot_gmapping.launch  myrobot_slam.launch  myrobot_teleop_key.launch  myrobot_world.launch  myroboturdf.launch  result_graphs.launch  slam_gmapping.launch
models/cube/: cube.config  cube.sdf  model.config  model.sdf  moving_cube.config  moving_cube.sdf
models/maze/: model.sdf
models/moving_cube/: model.config  model.sdf
models/myrobot/: model.sdf
models/myrobot/meshes/: BaseBoards.STL  Piastra_anteriore.dae  Piastra_anteriore.stl  Supporto_sg90_base.stl
models/myrobot/meshes/Supports/: BaseBoards.dae  supporto_pitch_servo_2.dae
models/myrobot_modelled/: model.config  model.sdf
models/myrobot_modelled/meshes/Supports/: Supporto_piastra_albero.dae
models/myrobot_urdf/meshes/Boards/: K64F.dae
models/myrobot_urdf/meshes/Supports/: Supp_RS.dae  supporto_pitch_servo_1.dae
models/myroboturdf/: common_properties.xacro  myrobot.gazebo.xacro  myrobot.urdf.xacro
models/myroboturdf/meshes/Boards/: K64F.SLDPRT
models/myroboturdf/meshes/Misc/: Towerpro Micro Servo 9g.SLDPRT  Turnigy_2200mAh_3S_20C_Lipo_Pack.dae  sg90.dae
models/myroboturdf/meshes/Supports/: Piastra_anteriore.stl  Piastra_anteriore2.stl  Supporto_piastra_albero.dae  Supporto_piastra_albero.stl  Supporto_sg90_base.dae  supporto_pitch_servo_1.stl  supporto_pitch_servo_1_new.stl  supporto_pitch_servo_2.stl  supporto_pitch_servo_2_noservo.CATPart  supporto_pitch_servo_2_noservo.stl
models/square_room/: model.config  model.sdf
models/square_room/square_room/: model.config  model.sdf
models/test_model/: model.sdf
models/testmodel/: testmodel.gazebo.xacro  testmodel.urdf  testmodel.urdf.xacro
msg/: PWM.msg  vect_msg.msg
plugins/actuator/: ActuatorPlugin.cc  ActuatorPlugin.cpp  ActuatorPlugin.hh  actuator_plugin.cpp  actuator_plugin.h  test.cpp  test.h
plugins/contact/: ContactPlugin.cc  ContactPlugin.hh  contact_plugin.cc  contact_plugin.hh
plugins/depth_camera/: depth_camera_plugin.cpp  depth_camera_plugin.h
plugins/diff_drive/: diff_drive_plugin.cpp
plugins/gazebo_ros_motors/: gazebo_ros_dc_motor.cpp  gazebo_ros_dc_motor.h
plugins/imu/: imu_plugin.cpp  imu_plugin.h
plugins/keys2cmdvel/: KeysToCmdVelPlugin.cc  KeysToCmdVelPlugin.hh
plugins/lidar/: laser_plugin.cpp  laser_plugin.h
plugins/light/: light_sensor_plugin.cpp  light_sensor_plugin.h
plugins/pwm_vel/: pwm_vel_plugin.cpp  pwm_vel_plugin.h
plugins/simpletrackedvehicle/: SimpleTrackedVehiclePlugin.cc  SimpleTrackedVehiclePlugin.hh
plugins/template/: TemplatePlugin.cpp  TemplatePlugin.h  template_plugin.cpp  template_plugin.h
plugins/trackedvehicle/: TrackedVehiclePlugin.cc  TrackedVehiclePlugin.hh
rviz/: laser_scan.rviz
save_model/: scripts100.h5  scripts110.h5  scripts130.h5  scripts200.h5  scripts210.h5  scripts230.h5  scripts240.h5  scripts260.h5  scripts290.h5  scripts50.h5  scripts60.h5  scripts70.h5
scripts/: PI_controller.py  arbiter.py  contact.py  controller.py  environment_stage_1.py  force.py  green_ball.py  light.py  move_head.py  moving_cube.py  my_pot_field.py  myrobot_dqn_stage_1.py  plotter.py  pot_field.py  psi_des.txt  psi_real.txt  ramdom_moving.py  random.py  realsense.py  set_odom.py  sim_time.txt  simple_publisher.py  slam_gmapping.py  teleop_key.py  topic_2_file.py  traj_plann.py  trajplan.py  vector_fcn.py  wandering.py
src/: camera_depth.cpp  env_stage_1.py  plannar_mover.cpp  random_moving.cpp  respawnGOAL.py
src/dc_motor_model/: Dc_motor_Dev.cpp  Dc_motor_Dev.h  Dc_motor_Dev_data.cpp  Dc_motor_Dev_private.h  Dc_motor_Dev_types.h  MW_target_hardware_resources.h  ert_main.cpp  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
src/dc_motor_model/R2019b/rtw/c/src/common/: rt_malloc_main.c
src/dc_motor_model/R2019b/simulink/include/: fixedpoint.h  rtw_continuous.h  simstruc_def.h  simstruc_internal.h  sl_datatype_access.h
src/myrobot_state_publisher/: joint_state_listener.cpp  joint_state_listener.h  robot_state_publisher.cpp  robot_state_publisher_node.cpp
src/simple_node/: MW_target_hardware_resources.h  ert_main.cpp  rtmodel.h  rtwtypes.h  simple_node.cpp  simple_node.h  simple_node_data.cpp  simple_node_private.h  simple_node_types.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
src/slam_mapping/: main.cpp  nodelet.cpp  replay.cpp  slam_gmapping.cpp  slam_gmapping.h
urdf/: myrobot.gazebo.xacro  myrobot.urdf copy.xacro  myrobot.urdf.xacro
urdf/meshes/Sensors/: IntelRealsense_D435_Multibody.dae  photodiode-Hamamatsu-S1223-01_BL.dae
urdf/meshes/Supports/: Piastra_anteriore.dae  Piastra_anteriore2.dae  supporto_pitch_servo_1_new.dae  supporto_pitch_servo_2_noservo.dae
worlds/: empty_world.world  green_ball.world  maze.world  obstacle_world.world  plannar_mover.world  square_room.world  test.world  tracked_vehicle_simple.world
